GearsetPOC/force-app/main/default/objects/User_Request__c/User_Request__c.object-meta.xml
<CustomObject>
    <label>User Request</label>
    <nameField>
        <displayFormat>U-{000}</displayFormat>
        <label>User Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>