GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Add_to_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Distribution__c</fullName>
    <formula>&quot;WebhelpUKandRO&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Add to Distribution List</label>
    <type>Text</type>
</CustomField>