GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Agent_Type__c.field-meta.xml
<CustomField>
    <fullName>Agent_Type__c</fullName>
    <label>Agent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>