GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Ayden_Payment_Link__c.field-meta.xml
<CustomField>
    <fullName>Ayden_Payment_Link__c</fullName>
    <formula>ISPICKVAL( Agent_Type__c ,&quot;Chat&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ayden (Payment Link)</label>
    <type>Checkbox</type>
</CustomField>