GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Box__c.field-meta.xml
<CustomField>
    <fullName>Box__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Box</label>
    <type>Checkbox</type>
</CustomField>