GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Carmen__c.field-meta.xml
<CustomField>
    <fullName>Carmen__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carmen</label>
    <type>Checkbox</type>
</CustomField>