GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Datacash__c.field-meta.xml
<CustomField>
    <fullName>Datacash__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Datacash</label>
    <type>Checkbox</type>
</CustomField>