GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Datacash_Password__c.field-meta.xml
<CustomField>
    <fullName>Datacash_Password__c</fullName>
    <defaultValue>&quot;Activation Token email will be sent from Gateway&quot;</defaultValue>
    <label>Datacash Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>