GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Datacash_Username__c.field-meta.xml
<CustomField>
    <fullName>Datacash_Username__c</fullName>
    <label>Datacash Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>