GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Datacash_Voucher__c.field-meta.xml
<CustomField>
    <fullName>Datacash_Voucher__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Datacash Voucher</label>
    <type>Checkbox</type>
</CustomField>