GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Datacash_Voucher_Password__c.field-meta.xml
<CustomField>
    <fullName>Datacash_Voucher_Password__c</fullName>
    <defaultValue>&quot;Password reset will be emailed through automatically&quot;</defaultValue>
    <label>Datacash Voucher Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>