GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Email_Salesforce_Support__c.field-meta.xml
<CustomField>
    <fullName>Email_Salesforce_Support__c</fullName>
    <defaultValue>&quot;Salesforce.Support@eurostar.com&quot;</defaultValue>
    <description>Email field hidden for all users. Is used in Workflow to notify Salesforce Admins about new joiner request</description>
    <label>Email Salesforce Support</label>
    <type>Email</type>
</CustomField>