GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Eurostar_Mailbox__c.field-meta.xml
<CustomField>
    <fullName>Eurostar_Mailbox__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eurostar Mailbox</label>
    <type>Checkbox</type>
</CustomField>