GearsetPOC/force-app/main/default/objects/User_Request__c/fields/iLoyal__c.field-meta.xml
<CustomField>
    <fullName>iLoyal__c</fullName>
    <formula>IF(ISPICKVAL(Agent_Type__c,&quot;Phone&quot;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>iLoyal</label>
    <type>Checkbox</type>
</CustomField>