GearsetPOC/force-app/main/default/objects/User_Request__c/fields/iLoyal_Password__c.field-meta.xml
<CustomField>
    <fullName>iLoyal_Password__c</fullName>
    <label>iLoyal Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>