GearsetPOC/force-app/main/default/objects/User_Request__c/fields/iLoyal_Username__c.field-meta.xml
<CustomField>
    <fullName>iLoyal_Username__c</fullName>
    <label>iLoyal Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>