GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Iris__c.field-meta.xml
<CustomField>
    <fullName>Iris__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Iris</label>
    <type>Checkbox</type>
</CustomField>