GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Language_s__c.field-meta.xml
<CustomField>
    <fullName>Language_s__c</fullName>
    <label>Language(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Dutch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>