GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Derby</fullName>
            </value>
            <value>
                <fullName>Bucharest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>