GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Name_Change__c.field-meta.xml
<CustomField>
    <fullName>Name_Change__c</fullName>
    <label>Name Change</label>
    <length>150</length>
    <type>Text</type>
</CustomField>