GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Network_Login__c.field-meta.xml
<CustomField>
    <fullName>Network_Login__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Network Login</label>
    <type>Checkbox</type>
</CustomField>