GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Network_Password__c.field-meta.xml
<CustomField>
    <fullName>Network_Password__c</fullName>
    <label>Network Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>