GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Network_Username__c.field-meta.xml
<CustomField>
    <fullName>Network_Username__c</fullName>
    <label>Network Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>