GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Opera__c.field-meta.xml
<CustomField>
    <fullName>Opera__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opera</label>
    <type>Checkbox</type>
</CustomField>