GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Opera_Password__c.field-meta.xml
<CustomField>
    <fullName>Opera_Password__c</fullName>
    <label>Opera Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>