GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Opera_Roles__c.field-meta.xml
<CustomField>
    <fullName>Opera_Roles__c</fullName>
    <formula>IF(ISPICKVAL(Agent_Type__c,&quot;Chat&quot;),&quot;Webhelp Chat GBP, Webhelp Chat EUR, Webhelp Chat USD&quot;,&quot;Webhelp CustCare GBP, Webhelp CustCare EUR, Webhelp CustCare USD&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opera Roles</label>
    <type>Text</type>
</CustomField>