GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Opera_Username__c.field-meta.xml
<CustomField>
    <fullName>Opera_Username__c</fullName>
    <label>Opera Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>