GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Qfiniti__c.field-meta.xml
<CustomField>
    <fullName>Qfiniti__c</fullName>
    <formula>IF(ISPICKVAL(Supervisor__c,&quot;Yes&quot;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qfiniti</label>
    <type>Checkbox</type>
</CustomField>