GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Remote_Access_via_Terminal_Server__c.field-meta.xml
<CustomField>
    <fullName>Remote_Access_via_Terminal_Server__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remote Access via Terminal Server</label>
    <type>Checkbox</type>
</CustomField>