GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Request_Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Request_Submitted_By__c</fullName>
    <defaultValue>$User.Email</defaultValue>
    <label>Request Submitted By</label>
    <type>Email</type>
</CustomField>