GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Request_to_be_sent_to__c.field-meta.xml
<CustomField>
    <fullName>Request_to_be_sent_to__c</fullName>
    <defaultValue>&quot;techteam@eurostar.com&quot;</defaultValue>
    <label>Request to be sent to</label>
    <type>Email</type>
</CustomField>