GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Salesforce__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesforce</label>
    <type>Checkbox</type>
</CustomField>