GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Skype_for_Business__c.field-meta.xml
<CustomField>
    <fullName>Skype_for_Business__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skype for Business</label>
    <type>Checkbox</type>
</CustomField>