GearsetPOC/force-app/main/default/objects/User_Request__c/fields/SSO_via_Okta__c.field-meta.xml
<CustomField>
    <fullName>SSO_via_Okta__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SSO via Okta</label>
    <type>Checkbox</type>
</CustomField>