GearsetPOC/force-app/main/default/objects/User_Request__c/fields/User_is_Becoming_a_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>User_is_Becoming_a_Supervisor__c</fullName>
    <label>User is Becoming a Supervisor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>