GearsetPOC/force-app/main/default/objects/User_Request__c/fields/User_To_Be_Disabled__c.field-meta.xml
<CustomField>
    <fullName>User_To_Be_Disabled__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User To Be Disabled</label>
    <referenceTo>User</referenceTo>
    <relationshipName>New_User_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>