GearsetPOC/force-app/main/default/objects/User_Request__c/fields/Webhelp_Employee_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Webhelp_Employee_Identifier__c</fullName>
    <label>Webhelp Employee Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>