GearsetPOC/force-app/main/default/objects/User_Request__c/recordTypes/Joiner_Request.recordType-meta.xml
<RecordType>
    <fullName>Joiner_Request</fullName>
    <active>true</active>
    <description>Form for creating a new user</description>
    <label>Joiner Request</label>
</RecordType>