GearsetPOC/force-app/main/default/objects/User_Request__c/recordTypes/Leaver_Request.recordType-meta.xml
<RecordType>
    <fullName>Leaver_Request</fullName>
    <active>true</active>
    <description>Form for requesting disablement for a leaver</description>
    <label>Leaver Request</label>
</RecordType>