GearsetPOC/force-app/main/default/objects/User_Request__c/listViews/Requests_Being_Worked_On.listView-meta.xml
<ListView>
    <fullName>Requests_Being_Worked_On</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>First_Name__c</columns>
    <columns>Surname__c</columns>
    <columns>User_To_Be_Changed__c</columns>
    <columns>User_To_Be_Disabled__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>Requests Being Worked On</label>
    <language>en_US</language>
    <sharedTo>
        <group>New_User_Creators</group>
        <group>New_User_Requester</group>
    </sharedTo>
</ListView>